# echo-app

./: .gitignore  start-backend.sh  start-frontend.sh
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  conversations.py  health.py  insights.py  journeys.py  memories.py  voice.py  voice_library.py
backend/app/brain/: extractor.py  schema.py  service.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: database.py  models.py
backend/app/experience_os/: blueprint_engine.py  composer.py  context.py  events.py  fragments.py  interfaces.py  orchestrator.py  runtime.py  schema.py  validation.py
backend/app/experience_os/blueprints/: clarity.yaml  comfort.yaml  confidence.yaml  default.yaml  encouragement.yaml  energy.yaml  focus.yaml  listen.yaml  motivation.yaml  peace.yaml  sleep.yaml
backend/app/experience_os/services/: journey_service.py  music_service.py  prompt_service.py  reflection_service.py  speech_service.py  voice_service.py
backend/app/models/: emotion.py  requests.py
backend/app/services/ambience/: base.py  elevenlabs_provider.py
backend/app/services/audio/: mixer.py
backend/app/services/emotion/: chat_pipeline.py  pipeline.py
backend/app/services/llm/: anthropic_provider.py  base.py  chat_provider.py  conversation_summarizer.py  factory.py  pacing.py  voice_mapping.py  (+2 more)
backend/docs/: ARCHITECTURE.md
backend/tests/: conftest.py  test_api.py  test_blueprint_engine.py  test_blueprint_runtime.py  test_conversation_summarizer.py  test_emotion_models.py  test_experience_composer.py  test_llm_parser.py  test_pacing.py  test_prompt_service.py
(+41 files in other folders)
