[project]
name = "voice-emotion-backend"
version = "0.1.0"
description = "AI Voice Emotion App — Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.30.0",
    "elevenlabs>=1.5.0",
    "faster-whisper>=1.0.0",
    "pydub>=0.25.1",
    "imageio-ffmpeg>=0.5.1",
    "sqlalchemy>=2.0.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Prompt strings contain intentionally long lines
"app/services/llm/anthropic_provider.py" = ["E501"]
"app/services/llm/chat_provider.py" = ["E501"]
# Long SQLAlchemy chains
"app/api/routes/conversations.py" = ["E501"]
# Journey template copy / long route signatures
"app/api/routes/journeys.py" = ["E501"]
"app/api/routes/insights.py" = ["E501"]
"app/db/models.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
]
